<resources>
    <string name="app_name">Pin Place</string>
    <string name="title_weather">Weather</string>
    <string name="title_all_places">All Places</string>
    <string name="title_place_details">Place Details</string>
    <string name="title_add_place">Add Place</string>
    <string name="title_map">Map</string>
    <string name="title_no_places">No Places added yet</string>

    <string name="error_empty_field">Empty field</string>
    <string name="error_permission_is_not_granted">Permission required for this Feature is Not Granted</string>

    <string name="result_saved_successfully">Saved Successfully</string>
    <string name="result_deleted">Deleted</string>

    <string name="action_add_image">Add Image</string>
    <string name="option_current">Current</string>
    <string name="option_gallery">Gallery</string>
    <string name="option_camera">Camera</string>
    <string name="option_delete">Delete</string>
    <string name="option_cancel">Cancel</string>

    <string name="warning_are_you_sure_to_delete">Are you sure to delete this Place?</string>


    <!--Weather-->
    <string name="st_celsius">°C</string>
    <string name="st_celsius_sign">°</string>
    <string name="st_feels_like">Feels like</string>
    <string name="st_wind">Wind</string>
    <string name="st_humidity">Humidity</string>
    <string name="st_pressure">Pressure</string>
    <string name="st_km_per_hour">km/h</string>
    <string name="st_km">km</string>
    <string name="st_m_bar">mbar</string>
    <string name="st_sunrise">Sunrise</string>
    <string name="st_sunset">Sunset</string>

    <!--Places-->
    <string name="st_title">Title</string>
    <string name="st_description">Description</string>
    <string name="st_date">Date</string>
    <string name="st_location">Location</string>
</resources>