<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_all_places">

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.rkhvstnv.pinplace.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_all_places"
        android:name="com.rkhvstnv.pinplace.ui.allplaces.AllPlacesFragment"
        android:label="@string/title_all_places"
        tools:layout="@layout/fragment_all_places">
        <action
            android:id="@+id/action_navigation_all_places_to_navigation_add_place"
            app:destination="@id/navigation_add_place"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_all_places_to_navigation_place_details"
            app:destination="@id/navigation_place_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_place"
        android:name="com.rkhvstnv.pinplace.ui.addplace.AddPlaceFragment"
        android:label="@string/title_add_place"
        tools:layout="@layout/fragment_add_place" />

    <fragment
        android:id="@+id/navigation_place_details"
        android:name="com.rkhvstnv.pinplace.ui.placedetails.PlaceDetailsFragment"
        android:label="@string/title_place_details"
        tools:layout="@layout/fragment_place_details" >
        <argument
            android:name="place_id"
            app:argType="integer"
            android:defaultValue="-5" />
    </fragment>
</navigation>