<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addplace.AddPlaceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <!--Image-->
        <FrameLayout
            android:id="@+id/_fl_image"
            android:layout_width="@dimen/add_place_image_size"
            android:layout_height="@dimen/add_place_image_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                android:padding="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/st_add_image"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />
        </FrameLayout>


        <!--Title-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_title"
            style="@style/PlaceTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_place_text_layout_margin_top"
            android:hint="@string/st_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_fl_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_date"
            style="@style/PlaceTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_place_text_layout_margin_top"
            android:hint="@string/st_date"
            app:layout_constraintEnd_toStartOf="@id/btn_current_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_place_current_btn_margin"
            android:text="@string/st_current"
            app:layout_constraintBottom_toBottomOf="@id/_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/_date" />


        <!--Location-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_location"
            style="@style/PlaceTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_place_text_layout_margin_top"
            android:hint="@string/st_location"
            app:layout_constraintEnd_toStartOf="@id/btn_current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_place_current_btn_margin"
            android:text="@string/st_current"
            app:layout_constraintBottom_toBottomOf="@id/_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/_location" />


        <!--Description-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_description"
            style="@style/PlaceTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_place_text_layout_margin_top"
            android:hint="@string/st_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Add place-->
        <Button
            android:id="@+id/btn_add_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_place_btn_margin_top"
            android:text="@string/title_add_place"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>