<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.placedetails.PlaceDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_details_frame_height">
            <!--Place on Map-->
            <com.google.android.gms.maps.MapView
                android:id="@+id/place_on_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible" />
            <!--Image-->
            <ImageView
                android:id="@+id/iv_place_details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/st_description"
                android:visibility="gone"
                tools:background="?attr/colorPrimary" />
        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--Date-->
                <TextView
                    android:id="@+id/tv_place_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:layout_marginTop="@dimen/place_details_text_margin_top"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/place_details_date_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="17.05.2022" />

                <!--Title-->
                <TextView
                    android:id="@+id/tv_place_title"
                    style="@style/PlaceTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_place_date"
                    tools:text="@tools:sample/cities" />

                <!--Location Name-->
                <TextView
                    android:id="@+id/_place_location"
                    style="@style/PlaceSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:text="@string/st_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_place_title" />

                <TextView
                    android:id="@+id/tv_place_location"
                    style="@style/PlaceDescriptorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:minLines="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/_place_location"
                    tools:text="7 Some Street, Some City, Some Country" />


                <!--Description-->
                <TextView
                    android:id="@+id/_place_description"
                    style="@style/PlaceSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:text="@string/st_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_place_location" />

                <TextView
                    android:id="@+id/tv_place_description"
                    style="@style/PlaceDescriptorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:minLines="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/_place_description"
                    tools:text="Some long Text" />


                <!--Delete-->
                <Button
                    android:id="@+id/btn_delete"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:layout_marginVertical="@dimen/place_details_subtitle_margin_top"
                    android:text="@string/option_delete"
                    android:textColor="?attr/colorError"
                    app:icon="@drawable/ic_baseline_delete_24"
                    app:iconTint="?attr/colorError"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_place_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <!--Fab that switch visibility of Map and Image in the top Frame-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/m_default_fab_margin"
        android:contentDescription="@string/st_description"
        android:src="@drawable/ic_place_24" />
</FrameLayout>